fixed grid style, sorting fetched news from firebase by date (descending)

--- a/src/components/news-overview/news-overview.styles.scss
+++ b/src/components/news-overview/news-overview.styles.scss
@@ -5,7 +5,21 @@
 
 .news-grid {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);    
+    margin: 20px 0;
+
+    a:nth-child(1) { 
+        grid-row-start: 1;
+        grid-row-end: 3;
+    }
+
+    &.grid-alternate {
+        a:nth-child(1) {
+            grid-row-start: 1;
+            grid-row-end: 3;
+            grid-column-start: 2;
+        }
+    }
 }
