added footer component, adjusted header style (select date is now close to the logo), added firebase query / sort / filter

--- a/src/components/news-item/news-item.styles.scss
+++ b/src/components/news-item/news-item.styles.scss
@@ -42,3 +42,11 @@
 .footer-box__header {
     margin: 5px 0px 10px 0px;
 }
+
+.footer-box__source {
+    align-self: flex-end;
+    top: 0;
+    position: absolute;
+    padding: 10px;
+    font-size: .6rem;
+}
