--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -11,7 +11,7 @@
     width: 20%;
     padding: 20px;
 
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
 
     span {
@@ -22,10 +22,11 @@
 
   .options {
       height: 100%;
-      width: 30%;
+      width: 40%;
       display: flex;
       align-items: center;
       text-align: left;
+      font-size: .8rem;
   }
 
   .option {
