--- a/src/components/select-date/select-date.styles.scss
+++ b/src/components/select-date/select-date.styles.scss
@@ -1,136 +1,66 @@
 
-.date-select {
-  display: flex;
-  align-items: center;
-}
 
-details {
-	position: relative;
-	width: 7em;
-}
 
-details[open] {
-	z-index: 1;
-	z-index: 100;
-}
-
-summary {
-	padding: .5rem;
-	cursor: pointer;
-	border-radius: 5px;
-  	border: 1px solid var(--secondary-color);;
-	list-style: none;
-	
-	
+.date-select-container {
 	display: flex;
-	justify-content: space-between;
+	align-items: center;
+	position: relative;
 }
 
-summary:focus {
-	border: 1px solid var(--primary-color);
+.date-select-container:hover, .date-select:hover {
+	cursor: pointer;
+	
+
 }
 
-summary::-webkit-details-marker {
-	display: none;
-}
 
-details[open] summary:before {
+.date-select-container::before {
 	content: '';
-	display: block;
-	width: 100vw;
-	height: 100vh;
-	background: transparent;
-	position: fixed;
-	top: 0;
-	left: 0;
-}
-
-summary:after {
-	content: '';
+	position: absolute;
 	width: 100%;
-	justify-self: flex-end;
 	width: .5rem;
 	height: .5rem;
-	border-bottom: 1px solid currentColor;
-	border-left: 1px solid currentColor;
+	border-bottom: 1.2px solid black;
+	border-left: 1.2px solid black;
 	border-bottom-left-radius: 2px;
 	transform: rotate(45deg) translate(50%, 0%);
+	transform: rotate(-45deg) translate(0%, 0%);
 	transform-origin: center center;
 	transition: transform ease-in-out 100ms;
-	margin-top: 4px;
-}
+	right: 10px;
+	margin-bottom: 6px;
+  }
 
-summary:focus {
-	outline: none;
-}
+.date-select {
 
-details[open] summary:after {
-	transform: rotate(-45deg) translate(0%, 0%);
-}
-
-ul {
-	width: 100%;
-	background-color:  var(--background-color);
-	border: 1px solid var(--secondary-color);
-	position: absolute;
-	top: calc(100% + .5rem);
-	left: 0;
-	padding: 1rem;
-	margin: 0;
-	box-sizing: border-box;
-	border-radius: 5px;
-	max-height: 200px;
-	overflow-y: auto;
-}
-
-li {
-	margin: 0;
-	padding: 1rem 0;
-	border-bottom: 1px solid #ccc;
-  	list-style: none;
-}
-
-li:hover {
-	cursor: pointer;
-}
-
-li:first-child {
-	padding-top: 0;
-}
-
-li:last-child {
-	padding-bottom: 0;
-	border-bottom: none;
-}
-
-/* FAKE SELECT */
-
-summary.radios {
-	counter-reset: radios;
-}
-
-input[type=radio] {
-	counter-increment: radios;
+	-moz-appearance: none;
+	-webkit-appearance: none;
 	appearance: none;
-	display: none;
-}
+	border: none;
 
-input[type=radio]:checked {
-	display: inline;
-}
-
-input[type=radio]:after {
-	content: attr(title);
-	display: inline;
-	font-size: 1rem;
-}
-
-ul.list {
-	counter-reset: labels;
-}
-
-label {
+	/* ... */
 	width: 100%;
-	display: block;
-	cursor: pointer;
+	height: 40px;
+	/* 	padding-left: 10px; */
+	padding: 7px 30px;
+	border: 1px solid var(--secondary-color);
+	border-radius: 3px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: .9rem;
 }
+
+
+
+.date-select-container:hover  {
+	font-size: 10px;	
+}
+
+
+.date-select:active, .date-select:focus {
+	outline: none
+}
+
+.date-select::-ms-expand {
+	display: none;
+  }
+
