--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgb(54, 53, 53);
-  background-color: var(--background-color)
+  background-color: var(--background-color);
+  width: 100vw;
 }
 
 :root {
